crates/submilli-engine/src/snapshots/submilli_engine__diagnostics__tests__render_clamps_at_eof.snap
---
source: crates/submilli-engine/src/diagnostics.rs
expression: "render(&diag, \"script.subm\", source, &line_index)"
---
error: boom
 --> script.subm:3:1
  |
2 | second
3 | third
  | ^^^^^
