crates/submilli-engine/src/snapshots/submilli_engine__diagnostics__tests__render_clamps_at_sof.snap
---
source: crates/submilli-engine/src/diagnostics.rs
expression: "render(&diag, \"script.subm\", source, &line_index)"
---
error: boom
 --> script.subm:1:1
  |
1 | first
  | ^^^^^
2 | second
