crates/submilli-engine/src/snapshots/submilli_engine__diagnostics__tests__render_multi_note_error_with_gutter_alignment.snap
---
source: crates/submilli-engine/src/diagnostics.rs
expression: "render(&diag, \"script.subm\", source, &line_index)"
---
error: missing return in all code paths
  --> script.subm:2:1
   |
 1 | a
 2 | b
   | ^
 3 | c
   |
note: function declared here
  --> script.subm:1:1
   |
 1 | a
   | ^
 2 | b
   |
note: this branch returns, but else does not
  --> script.subm:11:1
   |
10 | j
11 | k
   | ^
12 | l
