crates/submilli-engine/src/snapshots/submilli_engine__diagnostics__tests__render_multiline_span_carets.snap
---
source: crates/submilli-engine/src/diagnostics.rs
expression: "render(&diag, \"script.subm\", source, &line_index)"
---
error: multi-line span
 --> script.subm:2:7
  |
1 | line1
2 | line2 start
  |       ^^^^^
3 | middle
  | ^^^^^^
4 | end stop here
  | ^^^
5 | line5
