crates/submilli-engine/src/snapshots/submilli_engine__diagnostics__tests__render_multiple_helps.snap
---
source: crates/submilli-engine/src/diagnostics.rs
expression: "render(&diag, \"script.subm\", source, &line_index)"
---
error: bad
 --> script.subm:1:1
  |
1 | x
  | ^
2 | 
  |
help: first hint
  |
help: second hint
