crates/submilli-engine/src/snapshots/submilli_engine__diagnostics__tests__render_single_line_error.snap
---
source: crates/submilli-engine/src/diagnostics.rs
expression: "render(&diag, \"script.subm\", source, &line_index)"
---
error: type mismatch: expected `number`, found `string`
 --> script.subm:2:17
  |
1 | let x = 1;
2 | let y: number = "hello";
  |                 ^^^^^^^
3 | let z = 2;
