crates/submilli-engine/src/snapshots/submilli_engine__diagnostics__tests__render_warning_severity.snap
---
source: crates/submilli-engine/src/diagnostics.rs
expression: "render(&diag, \"script.subm\", source, &line_index)"
---
warning: unused variable `unused`
 --> script.subm:1:5
  |
1 | let unused = 42;
  |     ^^^^^^
2 |
