crates/submilli-engine/src/snapshots/submilli_engine__diagnostics__tests__render_with_help.snap
---
source: crates/submilli-engine/src/diagnostics.rs
expression: "render(&diag, \"script.subm\", source, &line_index)"
---
error: field `bar` does not exist on `Foo`
 --> script.subm:1:13
  |
1 | let x = foo.bar;
  |             ^^^
2 | 
  |
help: interface Foo {
  baz: number;
}
