crates/submilli-engine/src/snapshots/submilli_engine__diagnostics__tests__render_with_help_and_notes.snap
---
source: crates/submilli-engine/src/diagnostics.rs
expression: "render(&diag, \"script.subm\", source, &line_index)"
---
error: bad
 --> script.subm:2:1
  |
1 | a
2 | b
  | ^
3 | c
  |
help: try this instead
  |
note: declared here
 --> script.subm:1:1
  |
1 | a
  | ^
2 | b
